update: rough fix for modal body overflow. Button margin tweak.

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -44,17 +44,22 @@
   float: right; // Float the close icon to the right
 }
 
+//TODO: split out max-height for breakpoints
 .modal-body {
+  max-height: 72.25vh;
+  overflow: auto;
   border-bottom: 0px;
   padding-bottom: 4em;
+  border-top: solid 1px $color--grey80;
+  width: 100%;
 }
 
 .modal-footer {
   position: absolute;
   bottom: 0;
-  border-top: 0px;
   right: 0;
-  // position: relative;
+  width: 100%;
+  border-top: solid 1px $color--grey80;
 }
 
 /*
